Adicionado pagina de contato

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="cabecalho background-site">
-      <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
       <nav aria-label="menu-header">
         <ul class="menu">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -64,7 +64,7 @@
               <p class="font-ppns-8">Rastreador</p>
             </li>
           </ul>
-          <a class="botao" href="./nimbus.html">
+          <a class="botao" href="./bicicletas/nimbus.html">
             <p> mais sobre</p>
             <img src="./img/icones/seta.svg" alt="">
           </a>
@@ -100,7 +100,7 @@
                 <p class="font-ppns-8">Rastreador</p>
               </li>
             </ul>
-            <a class="botao" href="magic.html">
+            <a class="botao" href="./bicicletas/magic.html">
               <p> mais sobre</p>
               <img src="./img/icones/seta.svg" alt="">
             </a>
@@ -136,7 +136,7 @@
               <p class="font-ppns-8">Rastreador</p>
             </li>
           </ul>
-          <a class="botao" href="nebula.html">
+          <a class="botao" href="./bicicletas/nebula.html">
             <p> mais sobre</p>
             <img src="./img/icones/seta.svg" alt="">
           </a>
@@ -152,7 +152,7 @@
   <footer class="rodape">
     <div class="container-rodape background-site">
       <div class="logo-rodape">
-        <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
       </div>
       <ul class="contato rbot-txt-4">
         <li class="rbot-txt-2 ">
@@ -182,7 +182,7 @@
         <li class="lista-link"><a href="./seguros.html">Seguros</a>
         </li>
         <li class="lista-link">
-          <a href="./contatos.html">Contato</a>
+          <a href="./contato.html">Contato</a>
         </li>
         <li class="lista-link">
           <a href="./termos.html">Termos e Condições</a>
