--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -9,19 +9,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Bikcraft | Nebula Cosmic</title>
 </head>
 
 <body id="nimbus">
   <header>
     <div class="cabecalho background-site">
-      <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+      <a href="../index.html"><img src="../img/bikcraft.svg" alt=""></a>
       <nav aria-label="menu-header">
         <ul class="menu">
-          <li><a href="./bicicletas.html">Bicicletas</a></li>
-          <li><a href="./seguros.html">Seguros</a></li>
-          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="../bicicletas.html">Bicicletas</a></li>
+          <li><a href="../seguros.html">Seguros</a></li>
+          <li><a href="../contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -39,9 +39,9 @@
       <div class="bicicleta background-site">
 
         <div class=" bicicleta-fotos">
-          <img src="./img/bicicletas/nebula.jpg" alt="bicicleta nebula">
-          <img src="./img/bicicletas/nimbus.jpg" alt="bicicleta nimbus">
-          <img src="./img/bicicletas/magic.jpg" alt="bicicleta magic">
+          <img src="../img/bicicletas/nebula.jpg" alt="bicicleta nebula">
+          <img src="../img/bicicletas/nimbus.jpg" alt="bicicleta nimbus">
+          <img src="../img/bicicletas/magic.jpg" alt="bicicleta magic">
         </div>
 
         <div class="bicicleta-container c1">
@@ -53,11 +53,11 @@
 
             <div class="side-box c8 font-ppns-9 ">
               <div class="side-info">
-                <img src="./img/icones/entrega.svg" alt="">
+                <img src="../img/icones/entrega.svg" alt="">
                 <span>entrega em 5 dias</span>
               </div>
               <div class="side-info">
-                <img src="./img/icones/estoque.svg" alt="">
+                <img src="../img/icones/estoque.svg" alt="">
                 <span>18 em estoque</span>
               </div>
             </div>
@@ -67,22 +67,22 @@
             <h2 class="font-ppns-9">Informações</h2>
             <ul class="rbot-txt-5 c9">
               <li>
-                <img src="./img/icones/eletrica.svg" alt="">
+                <img src="../img/icones/eletrica.svg" alt="">
                 <h3 class="font-ppns-3">Motor Elétrico</h3>
                 <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
               </li>
               <li>
-                <img src="./img/icones/velocidade.svg" alt="">
+                <img src="../img/icones/velocidade.svg" alt="">
                 <h3 class="font-ppns-3">40 km/h</h3>
                 <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
               </li>
               <li>
-                <img src="./img/icones/rastreador.svg" alt="">
+                <img src="../img/icones/rastreador.svg" alt="">
                 <h3 class="font-ppns-3">Rastreador</h3>
                 <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
               </li>
               <li>
-                <img src="./img/icones/carbono.svg" alt="">
+                <img src="../img/icones/carbono.svg" alt="">
                 <h3 class="font-ppns-3"> Fibra de Carbono </h3>
                 <p>Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
               </li>
@@ -111,8 +111,8 @@
     <ul class="bikes background-site">
 
       <li>
-        <a class="container-bikes" href="./magic.html">
-          <img src="./img/bicicletas/magic.jpg" alt="foto bicicleta magic">
+        <a class="container-bikes" href="magic.html">
+          <img src="../img/bicicletas/magic.jpg" alt="foto bicicleta magic">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Magic Might</h3>
             <p class="rbot-txt-4">R$ 2499</p>
@@ -120,8 +120,8 @@
         </a>
       </li>
       <li>
-        <a class="container-bikes" href="./nimbus.html">
-          <img src="./img/bicicletas/nimbus.jpg" alt="foto bicicleta nimbus">
+        <a class="container-bikes" href="nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt="foto bicicleta nimbus">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Nimbus Stark</h3>
             <p class="rbot-txt-4">R$ 4999</p>
@@ -134,13 +134,13 @@
   <article class="pedale-seguro">
     <div class="pedale-seguro-container background-site">
       <div class="imagem-pedale">
-        <img src="./img/fotos/seguros.jpg" alt="">
+        <img src="../img/fotos/seguros.jpg" alt="">
       </div>
       <div class="pedale-textos c1">
         <h2 class="font-ppns-1">Pedale mais tranquilo como nosso <span class="ponto">seguro.</span></h2>
 
         <p class="rbot-txt-3 c9">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-        <a class="botao" href="">conheça mais</a>
+        <a class="botao" href="../seguros.html">conheça mais</a>
       </div>
     </div>
   </article>
@@ -148,24 +148,24 @@
   <footer class="rodape">
     <div class="container-rodape background-site">
       <div class="logo-rodape">
-        <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+        <a href="../index.html"><img src="../img/bikcraft.svg" alt=""></a>
       </div>
       <ul class="contato rbot-txt-4">
         <li class="rbot-txt-2 ">
           Contato
         </li>
         <li class="itens-contato">
-          <a href="./">+55 21 9999-9999</a>
-          <a href="./">contato@bikcraft.com</a>
+          <a href="../">+55 21 9999-9999</a>
+          <a href="../">contato@bikcraft.com</a>
         </li>
         <li class="itens-contato">
           <p>Rua Ali Perto, 42 - Botafogo</p>
           <p> Rio de Janeiro - RJ</p>
         </li>
         <li>
-          <a href=""><img src="./img/redes/facebook.svg" alt=""></a>
-          <a href=""><img src="./img/redes/instagram.svg" alt=""></a>
-          <a href=""><img src="./img/redes/youtube.svg" alt=""></a>
+          <a href=""><img src="../img/redes/facebook.svg" alt=""></a>
+          <a href=""><img src="../img/redes/instagram.svg" alt=""></a>
+          <a href=""><img src="../img/redes/youtube.svg" alt=""></a>
         </li>
       </ul>
       <ul class="links font-ppns-4 ">
@@ -173,15 +173,15 @@
           <p class="rbot-txt-2 ">Informações</p>
         </li>
         <li class="lista-link">
-          <a href="./bicicletas.html"> Bicicletas</a>
+          <a href="../bicicletas.html"> Bicicletas</a>
         </li>
-        <li class="lista-link"><a href="./seguros.html">Seguros</a>
-        </li>
-        <li class="lista-link">
-          <a href="./contatos.html">Contato</a>
+        <li class="lista-link"><a href="../seguros.html">Seguros</a>
         </li>
         <li class="lista-link">
-          <a href="./termos.html">Termos e Condições</a>
+          <a href="../contato.html">Contato</a>
+        </li>
+        <li class="lista-link">
+          <a href="../termos.html">Termos e Condições</a>
         </li>
       </ul>
       <p class="direitos rbot-txt-4">Bikcraft © Alguns direitos reservados.</p>
