--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="cabecalho background-site">
-      <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
       <nav aria-label="menu-header">
         <ul class="menu">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -48,7 +48,7 @@
     <ul class="bikes">
 
       <li>
-        <a class="container-bikes" href="./magic.html">
+        <a class="container-bikes" href="./bicicletas/magic.html">
           <img src="./img/bicicletas/magic-home.jpg" alt="foto bicicleta magic">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Magic Might</h3>
@@ -57,7 +57,7 @@
         </a>
       </li>
       <li>
-        <a class="container-bikes" href="./nimbus.html">
+        <a class="container-bikes" href="./bicicletas/nimbus.html">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="foto bicicleta nimbus">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Nimbus Stark</h3>
@@ -66,7 +66,7 @@
         </a>
       </li>
       <li>
-        <a class="container-bikes" href="./nebula.html">
+        <a class="container-bikes" href="./bicicletas/nebula.html">
           <img src="./img/bicicletas/nebula-home.jpg" alt="foto bicicleta nebula">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Nebula Cosmic</h3>
@@ -199,7 +199,7 @@
   <footer class="rodape">
     <div class="container-rodape background-site">
       <div class="logo-rodape">
-        <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
       </div>
       <ul class="contato rbot-txt-4">
         <li class="rbot-txt-2 ">
@@ -229,7 +229,7 @@
         <li class="lista-link"><a href="./seguros.html">Seguros</a>
         </li>
         <li class="lista-link">
-          <a href="./contatos.html">Contato</a>
+          <a href="./contato.html">Contato</a>
         </li>
         <li class="lista-link">
           <a href="./termos.html">Termos e Condições</a>
