--- a/seguros.html
+++ b/seguros.html
@@ -16,7 +16,7 @@
 <body id="seguros">
   <header>
     <div class="cabecalho background-site">
-      <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
       <nav aria-label="menu-header">
         <ul class="menu">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -161,7 +161,7 @@
   <footer class="rodape">
     <div class="container-rodape background-site">
       <div class="logo-rodape">
-        <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+        <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
       </div>
       <ul class="contato rbot-txt-4">
         <li class="rbot-txt-2 ">
@@ -191,7 +191,7 @@
         <li class="lista-link"><a href="./seguros.html">Seguros</a>
         </li>
         <li class="lista-link">
-          <a href="./contatos.html">Contato</a>
+          <a href="./contato.html">Contato</a>
         </li>
         <li class="lista-link">
           <a href="./termos.html">Termos e Condições</a>
