Adicionado pagina de termos

--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -13,7 +13,7 @@
   <title>Bikcraft | Magic Might</title>
 </head>
 
-<body id="nimbus">
+<body id="magic">
   <header>
     <div class="cabecalho background-site">
       <a href="../index.html"><img src="../img/bikcraft.svg" alt=""></a>
