--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -13,7 +13,7 @@
   <title>Bikcraft | Nebula Cosmic</title>
 </head>
 
-<body id="nimbus">
+<body id="nebula">
   <header>
     <div class="cabecalho background-site">
       <a href="../index.html"><img src="../img/bikcraft.svg" alt=""></a>
