--- a/contato.html
+++ b/contato.html
@@ -10,10 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Bikcraft | Bicicletas</title>
+  <title>Bikcraft | Contato</title>
 </head>
 
-<body id="seguros">
+<body id="contato">
   <header>
     <div class="cabecalho background-site">
       <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
@@ -56,12 +56,9 @@
             <img class="img-loja" src="./img/icones/telefone.svg" alt="">
             <p>+55 21 9999-9999</p>
           </div>
-
           <a href=""><img src=" ./img/redes/instagram-p.svg" alt=""></a>
           <a href=""><img src="./img/redes/facebook-p.svg" alt=""></a>
           <a href=""> <img src="./img/redes/youtube-p.svg" alt=""></a>
-
-
         </div>
         <form class="contato-form font-ppns-6" action="./contato.html">
           <div>
@@ -108,7 +105,6 @@
           </div>
         </div>
       </div>
-
       <div>
         <img src="./img/lojas/sp.jpg" alt="">
         <div class="container-local rbot-txt-6 c6">
@@ -129,9 +125,6 @@
         </div>
       </div>
     </div>
-
-
-
   </article>
 
 
