--- a/contato.html
+++ b/contato.html
@@ -34,54 +34,58 @@
         <h1 class="font-ppns-1 c1">nosso contato<span class="ponto">.</span></h1>
       </div>
     </div>
-  </main>
 
-  <article class="contato-bg">
-    <div class="background-site">
-      <div class="contato-page">
-        <div class="loja-online c10 rbot-txt-5">
-          <h3 class="font-ppns-5 c1">Loja Online</h3>
-          <div>
-            <img class="img-loja" src="./img/icones/local.svg" alt="">
-            <p>Rua Ali Perto, 35</p>
-            <p>Rio de Janeiro - RJ</p>
-            <p>Brasil - Terra - Vita Láctea</p>
+    <div class="titulo-bg">
+      <div class="background-site">
+        <div class="contato-page">
+          <div class="loja-online c10 rbot-txt-5">
+            <h3 class="font-ppns-5 c1">Loja Online</h3>
+            <div>
+              <img class="img-loja" src="./img/icones/local.svg" alt="">
+              <p>Rua Ali Perto, 35</p>
+              <p>Rio de Janeiro - RJ</p>
+              <p>Brasil - Terra - Vita Láctea</p>
+            </div>
+            <div>
+              <img class="img-loja" src="./img/icones/email.svg" alt="">
+              <p>vendas@bikcraft.com</p>
+              <p>assistencia@bikcraft.com</p>
+            </div>
+            <div>
+              <img class="img-loja" src="./img/icones/telefone.svg" alt="">
+              <p>+55 21 9999-9999</p>
+            </div>
+            <a href=""><img src=" ./img/redes/instagram-p.svg" alt=""></a>
+            <a href=""><img src="./img/redes/facebook-p.svg" alt=""></a>
+            <a href=""> <img src="./img/redes/youtube-p.svg" alt=""></a>
           </div>
-          <div>
-            <img class="img-loja" src="./img/icones/email.svg" alt="">
-            <p>vendas@bikcraft.com</p>
-            <p>assistencia@bikcraft.com</p>
-          </div>
-          <div>
-            <img class="img-loja" src="./img/icones/telefone.svg" alt="">
-            <p>+55 21 9999-9999</p>
-          </div>
-          <a href=""><img src=" ./img/redes/instagram-p.svg" alt=""></a>
-          <a href=""><img src="./img/redes/facebook-p.svg" alt=""></a>
-          <a href=""> <img src="./img/redes/youtube-p.svg" alt=""></a>
+          <form class="contato-form font-ppns-6" action="./contato.html">
+            <div>
+              <label for="nome">Nome</label>
+              <input type="text" id="nome" name="nome" placeholder="nome">
+            </div>
+            <div>
+              <label for="numero">Telefone</label>
+              <input type="tel" id="numero" name="numero" placeholder="(21)9999-9999">
+            </div>
+            <div class="email">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" placeholder="contato@email.com">
+            </div>
+            <div class="msg">
+              <label for="msg">Mensagem</label>
+              <textarea rows="5" type="text" id="msg" name="msg" placeholder="O que você precisa?"></textarea>
+            </div>
+            <button class="botao">ENVIAR MENSAGEM</button>
+          </form>
         </div>
-        <form class="contato-form font-ppns-6" action="./contato.html">
-          <div>
-            <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" placeholder="nome">
-          </div>
-          <div>
-            <label for="numero">Telefone</label>
-            <input type="tel" id="numero" name="numero" placeholder="(21)9999-9999">
-          </div>
-          <div class="email">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="contato@email.com">
-          </div>
-          <div class="msg">
-            <label for="msg">Mensagem</label>
-            <textarea rows="5" type="text" id="msg" name="msg" placeholder="O que você precisa?"></textarea>
-          </div>
-          <button class="botao">ENVIAR MENSAGEM</button>
-        </form>
       </div>
     </div>
-  </article>
+  </main>
+
+
+
+
 
   <article class="localizacao background-site">
     <h2 class="font-ppns-1 c2">lojas locais<span class="ponto">.</span></h2>
