--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             Cobertura estadual
           </li>
         </ul>
-        <a class="botao" href="">INSCREVA-SE</a>
+        <a class="botao" href="./orcamento.html">INSCREVA-SE</a>
       </div>
 
       <div class="ouro">
@@ -191,7 +191,7 @@
             Acesso ao Clube Bikcraft
           </li>
         </ul>
-        <a class="botao" href="">INSCREVA-SE</a>
+        <a class="botao" href="./orcamento.html">INSCREVA-SE</a>
       </div>
     </div>
   </article>
