--- a/seguros.html
+++ b/seguros.html
@@ -56,7 +56,7 @@
               Cobertura estadual
             </li>
           </ul>
-          <a class="botao" href="">INSCREVA-SE</a>
+          <a class="botao" href="./orcamento.html">INSCREVA-SE</a>
         </div>
 
         <div class="ouro">
@@ -81,7 +81,7 @@
               Acesso ao Clube Bikcraft
             </li>
           </ul>
-          <a class="botao" href="">INSCREVA-SE</a>
+          <a class="botao" href="./orcamento.html">INSCREVA-SE</a>
         </div>
       </div>
     </div>
