Adicionado funcionalidades javascript

--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -11,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <title>Bikcraft | Nebula Cosmic</title>
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body id="nebula">
@@ -47,62 +46,62 @@
         <div class="bicicleta-container c1">
           <div class="bicicleta-introducao">
             <p class="rbot-txt-3 c9">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-            <a class="botao" href="../orcamento.html">
+            <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nebula"">
               <p> comprar agora</p>
             </a>
 
-            <div class="side-box c8 font-ppns-9 ">
-              <div class="side-info">
-                <img src="../img/icones/entrega.svg" alt="">
-                <span>entrega em 5 dias</span>
-              </div>
-              <div class="side-info">
-                <img src="../img/icones/estoque.svg" alt="">
-                <span>18 em estoque</span>
-              </div>
-            </div>
+            <div class=" side-box c8 font-ppns-9 ">
+              <div class=" side-info">
+              <img src="../img/icones/entrega.svg" alt="">
+              <span>entrega em 5 dias</span>
           </div>
-
-          <div class="bicicleta-info ">
-            <h2 class="font-ppns-9">Informações</h2>
-            <ul class="rbot-txt-5 c9">
-              <li>
-                <img src="../img/icones/eletrica.svg" alt="">
-                <h3 class="font-ppns-3">Motor Elétrico</h3>
-                <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-              </li>
-              <li>
-                <img src="../img/icones/velocidade.svg" alt="">
-                <h3 class="font-ppns-3">40 km/h</h3>
-                <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-              </li>
-              <li>
-                <img src="../img/icones/rastreador.svg" alt="">
-                <h3 class="font-ppns-3">Rastreador</h3>
-                <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-              </li>
-              <li>
-                <img src="../img/icones/carbono.svg" alt="">
-                <h3 class="font-ppns-3"> Fibra de Carbono </h3>
-                <p>Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
-              </li>
-            </ul>
-          </div>
-
-          <div class="ficha-tecnica">
-            <h2 class="font-ppns-9">FICHA TÉCNICA</h2>
-            <ul class="bicicleta-fichatec 
-            rbot-txt-6">
-              <li><span>Peso</span><span>9 kg</span></li>
-              <li><span>Altura</span><span>60 cm</span></li>
-              <li><span>Largura</span><span>120 cm</span></li>
-              <li><span>Profundidade</span><span>10 cm</span></li>
-              <li><span>Marchas</span><span>16</span></li>
-              <li><span>Roda</span><span>29</span></li>
-            </ul>
+          <div class="side-info">
+            <img src="../img/icones/estoque.svg" alt="">
+            <span>18 em estoque</span>
           </div>
         </div>
       </div>
+
+      <div class="bicicleta-info ">
+        <h2 class="font-ppns-9">Informações</h2>
+        <ul class="rbot-txt-5 c9">
+          <li>
+            <img src="../img/icones/eletrica.svg" alt="">
+            <h3 class="font-ppns-3">Motor Elétrico</h3>
+            <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+          </li>
+          <li>
+            <img src="../img/icones/velocidade.svg" alt="">
+            <h3 class="font-ppns-3">40 km/h</h3>
+            <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+          </li>
+          <li>
+            <img src="../img/icones/rastreador.svg" alt="">
+            <h3 class="font-ppns-3">Rastreador</h3>
+            <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+          </li>
+          <li>
+            <img src="../img/icones/carbono.svg" alt="">
+            <h3 class="font-ppns-3"> Fibra de Carbono </h3>
+            <p>Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="ficha-tecnica">
+        <h2 class="font-ppns-9">FICHA TÉCNICA</h2>
+        <ul class="bicicleta-fichatec 
+            rbot-txt-6">
+          <li><span>Peso</span><span>9 kg</span></li>
+          <li><span>Altura</span><span>60 cm</span></li>
+          <li><span>Largura</span><span>120 cm</span></li>
+          <li><span>Profundidade</span><span>10 cm</span></li>
+          <li><span>Marchas</span><span>16</span></li>
+          <li><span>Roda</span><span>29</span></li>
+        </ul>
+      </div>
+    </div>
+    </div>
     </div>
   </main>
 
@@ -188,6 +187,7 @@
     </div>
   </footer>
 
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
