--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -11,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <title>Bikcraft | Magic Might</title>
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body id="magic">
@@ -38,7 +37,7 @@
     <div class="black-bg">
       <div class="bicicleta background-site">
 
-        <div class=" bicicleta-fotos">
+        <div class="bicicleta-fotos">
           <img src="../img/bicicletas/magic.jpg" alt="bicicleta magic">
           <img src="../img/bicicletas/nebula.jpg" alt="bicicleta nebula">
           <img src="../img/bicicletas/nimbus.jpg" alt="bicicleta nimbus">
@@ -47,7 +46,7 @@
         <div class="bicicleta-container c1">
           <div class="bicicleta-introducao">
             <p class="rbot-txt-3 c9">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-            <a class="botao" href="../orcamento.html">
+            <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=magic">
               <p> comprar agora</p>
             </a>
 
@@ -188,6 +187,7 @@
     </div>
   </footer>
 
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
