--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -11,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <title>Bikcraft | Nimbus Stark</title>
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body id="nimbus">
@@ -47,12 +46,12 @@
         <div class="bicicleta-container c1">
           <div class="bicicleta-introducao">
             <p class="rbot-txt-3 c9">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-            <a class="botao" href="../orcamento.html">
+            <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">
               <p> comprar agora</p>
             </a>
 
-            <div class="side-box c8 font-ppns-9 ">
-              <div class="side-info">
+            <div class=" side-box c8 font-ppns-9 ">
+              <div class=" side-info">
                 <img src="../img/icones/entrega.svg" alt="">
                 <span>entrega em 5 dias</span>
               </div>
@@ -188,6 +187,7 @@
     </div>
   </footer>
 
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
