--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -9,14 +7,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
   <title>Bikcraft</title>
+  <meta name="description" content="Site de vendas de bicicletas elétricas de alta qualidade, feitas sob medida ao gosto do cliente.">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.css" as="style">
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
   <header>
     <div class="cabecalho background-site">
-      <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
+      <a href="./index.html"><img width="136" height="32px" src="./img/bikcraft.svg" alt=""></a>
       <nav aria-label="menu-header">
         <ul class="menu">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -30,15 +31,17 @@
   <main class="introducao black-bg">
     <div class="introducao-container background-site">
       <div class="introducao-texto">
-        <h1 class="font-ppns-1">Bicicletas feitas
+        <h1 class="font-ppns-1 fadeInDown" data-anime="200">Bicicletas feitas
           sob medida<span class="ponto">.</span></h1>
-        <p class="rbot-txt-3">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="botao" href="./bicicletas.html">SELECIONE A SUA</a>
+        <p class="rbot-txt-3 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html">SELECIONE A SUA</a>
 
       </div>
-      <div>
-        <img src="./img/fotos/introducao.jpg" alt="bicileta preta">
-      </div>
+
+      <picture>
+        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+        <img width="1280" height="1600" data-anime="800" src="./img/fotos/introducao.jpg" alt="bicileta preta">
+      </picture>
     </div>
   </main>
 
@@ -49,7 +52,7 @@
 
       <li>
         <a class="container-bikes" href="./bicicletas/magic.html">
-          <img src="./img/bicicletas/magic-home.jpg" alt="foto bicicleta magic">
+          <img width="920" height="1040" src="./img/bicicletas/magic-home.jpg" alt="foto bicicleta magic">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Magic Might</h3>
             <p class="rbot-txt-4">R$ 2499</p>
@@ -58,7 +61,7 @@
       </li>
       <li>
         <a class="container-bikes" href="./bicicletas/nimbus.html">
-          <img src="./img/bicicletas/nimbus-home.jpg" alt="foto bicicleta nimbus">
+          <img width="920" height="1040" src="./img/bicicletas/nimbus-home.jpg" alt="foto bicicleta nimbus">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Nimbus Stark</h3>
             <p class="rbot-txt-4">R$ 4999</p>
@@ -67,7 +70,7 @@
       </li>
       <li>
         <a class="container-bikes" href="./bicicletas/nebula.html">
-          <img src="./img/bicicletas/nebula-home.jpg" alt="foto bicicleta nebula">
+          <img width="920" height="1040" src="./img/bicicletas/nebula-home.jpg" alt="foto bicicleta nebula">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Nebula Cosmic</h3>
             <p class="rbot-txt-4">R$ 3499</p>
@@ -88,19 +91,19 @@
         <div>
           <ul class="container-vantagens">
             <li>
-              <div class="vantagens-icones"><img src="./img/icones/eletrica.svg" alt=""></div>
+              <div class="vantagens-icones"><img width="24" height="24" src="./img/icones/eletrica.svg" alt=""></div>
               <h3 class="motor-eletrico font-ppns-3">Motor Elétrico</h3>
               <p class="rbot-txt-5 ">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
             </li>
             <li>
-              <div class="vantagens-icones"><img src="./img/icones/rastreador.svg" alt=""></div>
+              <div class="vantagens-icones"><img width="24" height="24" src="./img/icones/rastreador.svg" alt=""></div>
               <h3 class="rastreador font-ppns-3">Rastreador</h3>
               <p class="rbot-txt-5 ">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
             </li>
           </ul>
         </div>
       </div>
-      <div class="foto-ferramentas""><img src=" ./img/fotos/tecnologia.jpg" alt="ferramentas"></div>
+      <div class="foto-ferramentas""><img width=" 1200" height="1920" src=" ./img/fotos/tecnologia.jpg" alt="ferramentas"></div>
     </div>
   </article>
 
@@ -108,35 +111,35 @@
     <h2 class="font-ppns-1 background-site">nossos parceiros<span class="ponto">.</span></h2>
     <ul>
       <li>
-        <img src="./img/parceiros/caravan.svg" alt="">
+        <img width="140" height="38" src="./img/parceiros/caravan.svg" alt="">
       </li>
       <li>
-        <img src="./img/parceiros/ranek.svg" alt="">
+        <img width="149" height="36" src="./img/parceiros/ranek.svg" alt="">
       </li>
       <li>
-        <img src="./img/parceiros/handel.svg" alt="">
+        <img width="139" height="50" src="./img/parceiros/handel.svg" alt="">
       </li>
       <li>
-        <img src="./img/parceiros/dogs.svg" alt="">
+        <img width="152" height="39" src="./img/parceiros/dogs.svg" alt="">
       </li>
       <li>
-        <img src="./img/parceiros/lescone.svg" alt="">
+        <img width="208" height="41" src="./img/parceiros/lescone.svg" alt="">
       </li>
       <li>
-        <img src="./img/parceiros/flexblog.svg" alt="">
+        <img width="165" height="38" src="./img/parceiros/flexblog.svg" alt="">
       </li>
       <li>
-        <img src="./img/parceiros/wildbeast.svg" alt="">
+        <img width="196" height="34" src="./img/parceiros/wildbeast.svg" alt="">
       </li>
       <li>
-        <img src="./img/parceiros/surfbot.svg" alt="">
+        <img width="200" height="49" src="./img/parceiros/surfbot.svg" alt="">
       </li>
     </ul>
   </section>
 
   <section class="depoimento" aria-label="depoimento usuario">
 
-    <div><img src="./img/fotos/depoimento.jpg" alt=""></div>
+    <div><img width="1560" height="1360" src="./img/fotos/depoimento.jpg" alt=""></div>
     <div class="container-depoimento">
       <blockquote>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</blockquote>
       <span class="font-ppns-5">Ana Julia</span>
@@ -166,7 +169,7 @@
             Cobertura estadual
           </li>
         </ul>
-        <a class="botao" href="./orcamento.html">INSCREVA-SE</a>
+        <a class="botao" href="./orcamento.html?tipo=seguro&produto=prata">INSCREVA-SE</a>
       </div>
 
       <div class="ouro">
@@ -191,54 +194,55 @@
             Acesso ao Clube Bikcraft
           </li>
         </ul>
-        <a class="botao" href="./orcamento.html">INSCREVA-SE</a>
+        <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro"">INSCREVA-SE</a>
       </div>
     </div>
   </article>
 
-  <footer class="rodape">
-    <div class="container-rodape background-site">
-      <div class="logo-rodape">
-        <a href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
-      </div>
-      <ul class="contato rbot-txt-4">
-        <li class="rbot-txt-2 ">
-          Contato
-        </li>
-        <li class="itens-contato">
-          <a href="./">+55 21 9999-9999</a>
-          <a href="./">contato@bikcraft.com</a>
-        </li>
-        <li class="itens-contato">
-          <p>Rua Ali Perto, 42 - Botafogo</p>
-          <p> Rio de Janeiro - RJ</p>
-        </li>
-        <li>
-          <a href=""><img src="./img/redes/facebook.svg" alt=""></a>
-          <a href=""><img src="./img/redes/instagram.svg" alt=""></a>
-          <a href=""><img src="./img/redes/youtube.svg" alt=""></a>
-        </li>
-      </ul>
-      <ul class="links font-ppns-4 ">
-        <li>
-          <p class="rbot-txt-2 ">Informações</p>
-        </li>
-        <li class="lista-link">
-          <a href="./bicicletas.html"> Bicicletas</a>
-        </li>
-        <li class="lista-link"><a href="./seguros.html">Seguros</a>
-        </li>
-        <li class="lista-link">
-          <a href="./contato.html">Contato</a>
-        </li>
-        <li class="lista-link">
-          <a href="./termos.html">Termos e Condições</a>
-        </li>
-      </ul>
-      <p class="direitos rbot-txt-4">Bikcraft © Alguns direitos reservados.</p>
-    </div>
-  </footer>
-
+  <footer class=" rodape">
+          <div class="container-rodape background-site">
+            <div class="logo-rodape">
+              <a width="136" height="22" href="./index.html"><img src="./img/bikcraft.svg" alt=""></a>
+            </div>
+            <ul class="contato rbot-txt-4">
+              <li class="rbot-txt-2 ">
+                Contato
+              </li>
+              <li class="itens-contato">
+                <a href="./">+55 21 9999-9999</a>
+                <a href="./">contato@bikcraft.com</a>
+              </li>
+              <li class="itens-contato">
+                <p>Rua Ali Perto, 42 - Botafogo</p>
+                <p> Rio de Janeiro - RJ</p>
+              </li>
+              <li>
+                <a href=""><img width="32" height="32" src="./img/redes/facebook.svg" alt=""></a>
+                <a href=""><img width="32" height="32" src="./img/redes/instagram.svg" alt=""></a>
+                <a href=""><img width="32" height="32" src="./img/redes/youtube.svg" alt=""></a>
+              </li>
+            </ul>
+            <ul class="links font-ppns-4 ">
+              <li>
+                <p class="rbot-txt-2 ">Informações</p>
+              </li>
+              <li class="lista-link">
+                <a href="./bicicletas.html"> Bicicletas</a>
+              </li>
+              <li class="lista-link"><a href="./seguros.html">Seguros</a>
+              </li>
+              <li class="lista-link">
+                <a href="./contato.html">Contato</a>
+              </li>
+              <li class="lista-link">
+                <a href="./termos.html">Termos e Condições</a>
+              </li>
+            </ul>
+            <p class="direitos rbot-txt-4">Bikcraft © Alguns direitos reservados.</p>
+          </div>
+          </footer>
+          <script src="./js/plugins/simple-anime.js"></script>
+          <script src="./js/script.js"></script>
 </body>
 
 </html>
