--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Bikcraft</title>
   <meta name="description" content="Site de vendas de bicicletas elétricas de alta qualidade, feitas sob medida ao gosto do cliente.">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="preload" href="./css/style.css" as="style">
+
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
   <script>document.documentElement.classList.add("js");</script>
 </head>
 
